[package]
name = "let-arrow"
authors.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
arrow = "51.0"
parquet = { version ="51.0", features = ["async", "arrow"] }
